# dotfiles

./: .bashrc  .config-paths.yml  .gitconfig  .gitconfig.aliases  .gitconfig.common  .gitignore  .ignore  .inputrc  404.html  CNAME  README.md  book.js  book.toml  config-paths.yml  discord-and-openasar.html  flake.nix  gpg-setup.md  highlight-abc7f01d.js  homepage.age  index.html  init.bash  mullvad_wireguard.age  my-dotfiles.html  nix-conf.nix  print.html  recyclarr.age  recyclarr.yml  result  searcher-c2a407aa.js  searchindex-03944987.js  searchindex-3245143a.js  searchindex-8120f33d.js  searchindex-90de14fe.js  searchindex-a09e4e88.js  searchindex.js  searchindex.json  secrets.nix  section-separator-characters.md  special-characters.md  steam_quirks.html  (+10 more)
.SpaceVim.d/: coc-settings.json  init.toml
.config/: .ignore  config-paths.yml  starship.toml  stylua.toml  topgrade.toml
.github/: dependabot.yml
.hammerspoon/: .luacheckrc  init.lua  vim-keymaps.lua
.ssh/: config
SwiftBarPlugins/: gitlabci.5m.sh  homebrewcask.4h.sh
articles/: declarative-desktop-env-config-with-nix.html  discord-openasar.html  github-neovim-1password-cli.html  linux-isnt-for-nerds-anymore.html
checks/: flake-inputs.nix  lint-lua.nix  lint-nix.nix
conf.d/: .xprofile  config-paths.yml  config.kdl  dot_profile.sh  git-ch.bash  gnome-monitors.xml  nix.conf  nixos.nix  opsudo.bash  recyclarr.yml  ublock-filters.yml
docs/: .gitignore  README.md  SUMMARY.md  book.toml  (+9 more)
ublock-mdbook/: .gitignore  Cargo.toml  default.nix  flake.nix
ublock-mdbook/src/: main.rs  ublock-filters.yml
(+828 files in other folders)
